fix dashboard cards alignment

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,107 +1,92 @@
-
 @import "variables.scss";
-
 
 // mat-grid-tile{
 //   border-bottom: 1px solid gray;
 // }
-span.tile-header{
+span.tile-header {
   font-size: 11px;
   color: #3f3f3f;
 }
 
-
-mat-card{
-  padding:0;
+mat-card {
+  padding: 0;
 }
 
-mat-icon{
+mat-icon {
   height: 15px;
 }
 
-.desc{
+.desc {
   // margin-left: 80px;
   // margin-top: 80px;
   margin: 20px auto 19px 20px;
   width: 70%;
 }
 
-
-.card-left, .card-right{
-  padding-top:31px;
+.card-left,
+.card-right {
+  padding-top: 31px;
   padding-bottom: 31px;
   display: inline;
 }
 
-@media  screen and (max-width: 1079px) {
-  .card-left, .card-right{
-    width:85% !important;
-    display: block !important;
-    margin-right: 70px !important;
-  }
-  .card-right{
-    margin-top:50px;
-    margin-left: 7.5% !important;
-    float: left !important;
-
+@media screen and (max-width: 1079px) {
+  .cards-container {
+    flex-direction: column !important;
   }
 }
 
-.card-left{
-  float: left;
-  width:58%;
-  margin-left: 4%;
-  background-image: url("/assets/img/bg-queue.png");
-}
-.card-right{
-  float: right;
-  width:30%;
-  margin-right:  4%;
-  background-image: url("/assets/img/bg-open.png");
-  min-width: 186px;
+.cards-container {
+  display: flex;
+  flex-direction: row;
+  .card-left {
+    flex: 3;
+    margin: 40px;
+    background-image: url("/assets/img/bg-queue.png");
+  }
+  .card-right {
+    flex: 2;
+    margin: 40px;
+    background-image: url("/assets/img/bg-open.png");
+    min-width: 186px;
+  }
 }
 
-
-.next-con-btn{
-  background-color: $primary-color ;
-  color:#ffffff;
+.next-con-btn {
+  background-color: $primary-color;
+  color: #ffffff;
   border-radius: 50px;
-  margin:20px;
+  margin: 20px;
   font-size: 12px;
 }
 
-
-.view-more-btn{
+.view-more-btn {
   border-radius: 50px;
-  margin:20px;
+  margin: 20px;
   font-size: 12px;
   border: 1px solid #737373;
 }
 
-.badge{
-  height:0px
+.badge {
+  height: 0px;
 }
 
 //#BD2828
 
-
-.total-badge{
+.total-badge {
   display: inline;
   position: absolute;
-  top:25px;
+  top: 25px;
   right: 39px;
 }
 
-
-.last-msg{
+.last-msg {
   color: #3f3f3f;
 }
 
-.noCon{
+.noCon {
   margin-left: 21px;
 }
-
-
 
 table {
   width: 100%;
